--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@ Input your WhatsApp message here.</textarea
             id="qrcode"
             class="grid_item"
             style="margin-top: 1em; align-items: center"
-          ></div>
+          >
+        </div>
         </a>
         <a id="svgl1" name="svglink" href="javascript:void(0)" download="filename"
-          >DOWNLOAD SVG</a
-        >
+          >DOWNLOAD SVG</a>
       </div>
     </div>
   </body>
