--- a/URLOnly.html
+++ b/URLOnly.html
@@ -106,9 +106,7 @@
     <p style="text-align:center;">Paste the url in the box and hit enter.</p>
     <hr>
 
-    <textarea id="urlText" rows="10">
-
-</textarea>
+    <textarea id="urlText" rows="10"></textarea>
 <div class="grid_item" style="margin-top: 1em">
   <button onclick="makeCode(); wANumFileDl()" style="margin-top: 1em">Update</button>
 </div>
