--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
     <div class="grid_container">
       <div class="grid_menu">
         <a href="https://waqrcode.netlify.app/urlonly">URL Only Page</a>
+        <a href="https://waqrcode.netlify.app/TextProjectWeb">TextProj Page</a>
+        
         </div>
 
       <div class="grid_item">
