--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="grid_container">
       <div class="grid_menu">
         <a href="https://waqrcode.netlify.app/urlonly">URL Only Page</a>
-        <a href="https://waqrcode.netlify.app/TextProjectWeb">TextProj Page</a>
+        <a href="https://waqrcode.netlify.app/TextProjRegEx.html">TextProj Page</a>
         
         </div>
 
