--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>QRCode link generator for WhatsApp "click to chat" message.</title>
-    <script type="text/javascript" src="jquery.min.js"></script>
+  <!--  <script type="text/javascript" src="jquery.min.js"></script> -->
     <script type="text/javascript" src="qrcode.js"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap");
