--- a/TextProjRegEx.html
+++ b/TextProjRegEx.html
@@ -14,6 +14,11 @@
     </style>
   </head>
   <body>
+    <div class="grid_menu">
+      <a href="https://waqrcode.netlify.app/">WAQRCode Page</a> 
+      <a href="https://waqrcode.netlify.app/urlonly">URL Only Page</a>  
+
+    </div>
     <div id="container" style="text-align: center">
       <textarea
         id="input"
