--- a/URLOnly.html
+++ b/URLOnly.html
@@ -99,6 +99,7 @@
   <div class="grid_container">
     <div class="grid_menu">
       <a href="https://waqrcode.netlify.app/">WAQR Page</a>
+        <a href="https://waqrcode.netlify.app/TextProjRegEx.html">TextProj Page</a> 
     </div>
   </div>
 
