--- a/TextProjRegEx.html
+++ b/TextProjRegEx.html
@@ -32,12 +32,13 @@
     <label for="RepFootnotes"> Remove Text in Brackets</label>
 
     <input type="checkbox" id="repPattern" name="repPattern" value="RepPattern" /><br>
-    <label for="RepPattern"> Remove Text in Brackets</label>
+    <label for="RepPattern"> RegEx Pattern Search & Replace</label>
 
 
-    <label for="repPatSearch">Replace Pattern Search - regex:</label>
-    <input type="text" id="repPatSearch" name="repPatSearch" />
-
+    <label for="repPatSearch">Pattern to Search - regex pattern:</label>
+    <input type="text" id="repPatSearch" name="repPatSearch" /> 
+    <label for="repPatReplace">Replace With - regex replacement:</label>
+    <input type="text" id="repPatReplace" name="repPatReplace" />
 
 
 
