--- a/TextProjRegEx.html
+++ b/TextProjRegEx.html
@@ -31,14 +31,14 @@
     <input type="checkbox" id="repFootnotes" name="repFootnotes" value="ReplaceFootnotes" /> 
     <label for="RepFootnotes"> Remove Text in Brackets</label>
 
-    <input type="checkbox" id="repPattern" name="repPattern" value="RepPattern" /><br>
-    <label for="RepPattern"> RegEx Pattern Search & Replace</label>
+    <input type="checkbox" id="repPattern" name="repPattern" value="RepPattern" />
+    <label for="RepPattern"> RegEx Pattern Search & Replace</label><br>
 
 
     <label for="repPatSearch">Pattern to Search - regex pattern:</label>
-    <input type="text" id="repPatSearch" name="repPatSearch" /> 
+    <input type="text" id="repPatSearch" name="repPatSearch" placeholder="Pattern to Search - regex pattern:" /> 
     <label for="repPatReplace">Replace With - regex replacement:</label>
-    <input type="text" id="repPatReplace" name="repPatReplace" />
+    <input type="text" id="repPatReplace" name="repPatReplace" placeholder="Replace With - regex replacement:"/>
 
 
 
